--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
 								<span class="progressBar-percentage progressBar-percentage-count"></span>
 							</div>
 						</div>
-						<p class="text-uppercase">Web Design</p>
+						<p class="text-uppercase">ถูกกว่า</p>
 					</div>
 				</div>
 				<div class="col-lg-3 col-sm-6 d-flex justify-content-center">
@@ -219,7 +219,7 @@
 								<span class="progressBar-percentage progressBar-percentage-count"></span>
 							</div>
 						</div>
-						<p class="text-uppercase">UI/UX Design</p>
+						<p class="text-uppercase">รวดเร็วกว่า</p>
 					</div>
 				</div>
 				<div class="col-lg-3 col-sm-6 d-flex justify-content-center">
@@ -269,8 +269,8 @@
 			<div class="container">
 				<div class="controls d-flex flex-wrap justify-content-center">
 					<a class="filter active" data-filter="all">All</a>
-					<a class="filter" data-filter=".category-1">Categories</a>
-					<a class="filter" data-filter=".category-2">Branding</a>
+					<a class="filter" data-filter=".category-1">กดได้</a>
+					<a class="filter" data-filter=".category-2">กดได้ 2</a>
 					<a class="filter" data-filter=".category-3">Image Manipulation</a>
 					<a class="filter" data-filter=".category-4">Creative Work</a>
 					<a class="filter" data-filter=".category-5">Web Design</a>
