--- a/index.html
+++ b/index.html
@@ -23,10 +23,14 @@
 		============================================= -->
 		<link rel="stylesheet" href="css/linearicons.css">
 		<link rel="stylesheet" href="css/owl.carousel.css">
-		<link rel="stylesheet" href="css/font-awesome.min.css">
+		<!-- <link rel="stylesheet" href="css/font-awesome.min.css"> -->
 		<link rel="stylesheet" href="css/animate.css">
 		<link rel="stylesheet" href="css/bootstrap.css">
 		<link rel="stylesheet" href="css/main.css">
+		<link rel="stylesheet" href="css/micons/micons.css">
+		<link href="https://cdn.rawgit.com/michalsnik/aos/2.1.1/dist/aos.css" rel="stylesheet">
+
+
 	</head>
 	<body>
 		<div id="top"></div>
@@ -36,7 +40,7 @@
 				<div class="container">
 					<div class="header-content d-flex justify-content-between align-items-center">
 						<div class="logo">
-							<a href="#top" class="smooth" style="font-size: 15px;color:white;"><img src="img/logo.png" alt="">    RNK Products</a><!--  -->
+							<a href="#top" class="smooth" style="font-size: 15px;color:white;"><img src="img/logo.png" alt="">    </a>
 						</div>
 						<div class="right-bar d-flex align-items-center">
 							<nav class="d-flex align-items-center">
@@ -50,17 +54,17 @@
 								</ul>
 								<a href="#" class="mobile-btn"><span class="lnr lnr-menu"></span></a>
 							</nav>
-							<div class="search relative">
+							<!-- <div class="search relative">
 								<span class="lnr lnr-magnifier"></span>
 								<form action="#" class="search-field">
 									<input type="text" placeholder="Search here" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Search here'">
 									<button class="search-submit"><span class="lnr lnr-magnifier"></span></button>
 								</form>
-							</div>
+							</div> -->
 							<div class="header-social d-flex align-items-center">
-								<a href="#"><i class="fa fa-facebook"></i></a>
-								<a href="#"><i class="fa fa-twitter"></i></a>
-								<a href="#"><i class="fa fa-linkedin"></i></a>
+								<a href="#"><i class="fab fa-facebook"></i></a>
+								<a href="#"><i class="fab fa-twitter"></i></a>
+								<a href="http://line.me/ti/p/n0nnon"><i class="fab fa-line"></i></a>
 							</div>
 						</div>
 					</div>
@@ -71,14 +75,16 @@
 		<!-- Start Banner Area -->
 		<section class="banner-area relative">
 			<div class="overlay overlay-bg"></div>
-			<div class="container">
+			<div class="container" >
 				<div class="row fullscreen justify-content-center align-items-center">
 					<div class="col-lg-8">
 						<div id="fade-content" class="banner-content text-center">
 							<p class="text-uppercase text-white" style="font-size: 20px">Welcom to website</p>
 							<h1 class="text-uppercase text-white" style="font-size: 55px">RNK Products</h1>
 							<p class="text-uppercase text-white" style="font-size: 20px; font-family: 'Sriracha', cursive;">เราเป็นผู้แทนจำหน่าย หมึกแท้และหมึกรีเมนูทุกรุ่นทุกยีห้อ</p>
-							<a href="#" class="primary-btn banner-btn">Explore Us</a>
+							<div data-aos="fade-up" data-aos-offset="250" data-aos-duration="2000">
+								<a href="#intro" class="primary-btn banner-btn smoothscroll">Explore Us</a>
+							</div>
 						</div>
 					</div>
 				</div>
@@ -86,17 +92,18 @@
 		</section>
 		<!-- End Banner Area -->
 		<!-- Start About Area -->
+		<div id="intro"></div>
 		<section class="section-full gray-bg">
 			<div class="container">
 				<div class="row justify-content-center">
 					<div class="col-lg-10">
 						<div class="section-title text-center">
-							<p class="text-uppercase" style="font-size: 30px;font-family: 'Pridi', serif;">ยินดีรับใช้ ใส่ใจให้บริการ</p>
-							<h3 style="font-size: 20px;font-family: 'Pridi', serif;">เราคัดสรรแต่สินค้าที่มีคุณภาพเท่านั้น สินค้ารับประกัน คุณภาพ บริการส่งฟรีในเขตกรุงเทพฯและปริมณฑล เรายึดถือความสำคัญของลูกค้าเป็นหลัก เพราะเราตระหนักดีว่า หากไม่มีท่านให้การสนับสนุน คงไม่มี อาร์ เอ็น เค ในวันนี้ เราจะพัฒนาสินค้าและการให้บริการ ต่อไปอย่างไม่หยุดยั้ง ทางร้านมีสินค้าหลายรุ่นไว้บริการท่าน</h3>
+							<p class="text-uppercase" style="font-size: 30px;font-family: 'Sriracha', cursive;">ยินดีรับใช้ ใส่ใจให้บริการ</p>
+							<h3 style="font-size: 20px;font-family: 'Sriracha', cursive;">เราคัดสรรแต่สินค้าที่มีคุณภาพเท่านั้น สินค้ารับประกัน คุณภาพ บริการส่งฟรีในเขตกรุงเทพฯและปริมณฑล เรายึดถือความสำคัญของลูกค้าเป็นหลัก เพราะเราตระหนักดีว่า หากไม่มีท่านให้การสนับสนุน คงไม่มี อาร์ เอ็น เค ในวันนี้ เราจะพัฒนาสินค้าและการให้บริการ ต่อไปอย่างไม่หยุดยั้ง ทางร้านมีสินค้าหลายรุ่นไว้บริการท่าน</h3>
 						</div>
 					</div>
 				</div>
-				<div class="row">
+				<div class="row" data-aos="fade-up" data-aos-offset="250" data-aos-duration="800">
 					<div class="col-md-4">
 						<figure class="signle-service">
 							<img src="img/s1.jpg" class="img-fluid" alt="">
@@ -143,7 +150,7 @@
 					</div>
 				</div>
 				<div class="row">
-					<div class="col-lg-3 col-sm-6">
+					<div class="col-lg-3 col-sm-6" data-aos="fade-right" data-aos-offset="210" data-aos-duration="800">
 						<div class="single-product">
 							<div class="icon">
 								<span class="lnr lnr-star"></span>
@@ -154,7 +161,7 @@
 							</div>
 						</div>
 					</div>
-					<div class="col-lg-3 col-sm-6">
+					<div class="col-lg-3 col-sm-6" data-aos="fade-right" data-aos-offset="210" data-aos-duration="800">
 						<div class="single-product">
 							<div class="icon">
 								<span class="lnr lnr-magic-wand"></span>
@@ -164,8 +171,8 @@
 								<p>Today, many people rely on computers to do homework, work, and create or store useful</p>
 							</div>
 						</div>
-					</div>
-					<div class="col-lg-3 col-sm-6">
+				</div>
+					<div class="col-lg-3 col-sm-6" data-aos="fade-left" data-aos-offset="210" data-aos-duration="800">
 						<div class="single-product">
 							<div class="icon">
 								<span class="lnr lnr-sun"></span>
@@ -176,7 +183,7 @@
 							</div>
 						</div>
 					</div>
-					<div class="col-lg-3 col-sm-6">
+					<div class="col-lg-3 col-sm-6" data-aos="fade-left" data-aos-offset="210" data-aos-duration="800">
 						<div class="single-product">
 							<div class="icon">
 								<span class="lnr lnr-layers"></span>
@@ -359,9 +366,9 @@
 									<p class="text-white">This article is floated online with an aim to help you find the best dvd printing solution. Dvd</p>
 									<div class="line"></div>
 									<div class="social d-flex align-items-center justify-content-center">
-										<a href="#"><i class="fa fa-facebook"></i></a>
-										<a href="#"><i class="fa fa-twitter"></i></a>
-										<a href="#"><i class="fa fa-linkedin"></i></a>
+										<a href="#"><i class="fab fa-facebook"></i></a>
+										<a href="#"><i class="fab fa-twitter"></i></a>
+										<a href="#"><i class="fab fa-line"></i></a>
 									</div>
 								</div>
 							</div>
@@ -378,9 +385,9 @@
 									<p class="text-white">This article is floated online with an aim to help you find the best dvd printing solution. Dvd</p>
 									<div class="line"></div>
 									<div class="social d-flex align-items-center justify-content-center">
-										<a href="#"><i class="fa fa-facebook"></i></a>
-										<a href="#"><i class="fa fa-twitter"></i></a>
-										<a href="#"><i class="fa fa-linkedin"></i></a>
+										<a href="#"><i class="fab fa-facebook"></i></a>
+										<a href="#"><i class="fab fa-twitter"></i></a>
+										<a href="#"><i class="fab fa-linkedin"></i></a>
 									</div>
 								</div>
 							</div>
@@ -799,6 +806,11 @@
 					</div>
 				</div>
 			</div>
+
+			 <div class="go-top">
+                    <a class="smoothscroll" title="Back to Top" href="#top"><i class="icon-arrow-up" aria-hidden="true"></i></a>
+                </div>
+
 		</footer>
 
 		<script src="js/vendor/jquery-2.2.4.min.js"></script>
@@ -809,5 +821,10 @@
 		<script src="js/owl.carousel.min.js"></script>
 		<script src="js/mixitup.min.js"></script>
 		<script src="js/main.js"></script>
+		<script src="https://cdn.rawgit.com/michalsnik/aos/2.1.1/dist/aos.js"></script>
+		<script defer src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"></script>
+		<script>
+    AOS.init();
+  </script>
 	</body>
 </html>
